# Plastopol-Website

./: .gitignore  README.md  cms-logs.txt  package-lock.json  package.json
Plastopol CMS/: index.html  package-lock.json  package.json  specsheet.md  vite.config.ts
Plastopol CMS/src/: main.ts  styles.css
Plastopol CMS/src-tauri/: Cargo.toml  tauri.conf.json
Plastopol CMS/src-tauri/capabilities/: default.json
Plastopol CMS/src-tauri/src/: main.rs
Plastopol CMS/src-tauri/src/commands/: config.rs  git.rs  images.rs  log.rs  mod.rs  products.rs
Plastopol CMS/src/components/: ActionBar.ts  ConfigModal.ts  EditorFields.ts  EditorLists.ts  HistoryModal.ts  ImageManager.ts  ProductEditor.ts  Sidebar.ts
Plastopol CMS/src/lib/: autosave.ts  logger.ts  product.ts  search.ts  store.ts  tauri.ts  types.ts
content/: products.json
src/app/: page.tsx
src/app/catalog/: page.tsx
src/app/products/: page.tsx
src/components/layout/: Container.tsx  Navbar.tsx
src/components/product/: ProductDetails.tsx  ProductGrid.tsx  ProductSpecs.tsx
src/components/ui/: Button.tsx  Input.tsx
src/data/: products.json
src/features/catalog/: catalogIndex.ts
src/features/products/: getProducts.ts  getProductsBySlug.ts  productUtils.ts  sortProducts.ts
src/lib/: constants.ts  slugify.ts
src/styles/: globals.css
website/: README.md  filetree.md  package-lock.json  package.json  tsconfig.json
website/src/app/: layout.tsx  page.tsx
website/src/lib/: constants.ts  formatPrice.ts
website/src/styles/: globals.css
website/src/types/: index.ts
(+24 files in other folders)
