[package]
name = "plastopol-cms"
version = "0.1.0"
description = "Plastopol CMS Desktop App"
authors = ["Plastopol"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [
  "api-all",
  "shell-open",
  "dialog-open",
  "fs-all",
  "path-all",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
